<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Akademisyennavigation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/renk1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/okulfoto" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout2"
            android:layout_width="358dp"
            android:layout_height="219dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.479"
            app:useDefaultMargins="true">

            <ImageButton
                android:id="@+id/program"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:background="@drawable/yeni_resim"
                android:contentDescription="@string/program"
                android:scaleType="centerInside"
                app:layout_column="0"
                app:layout_row="0"
                app:srcCompat="@drawable/person" />

            <ImageButton
                android:id="@+id/yemek"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:background="@drawable/yeni_resim"
                android:contentDescription="@string/yemek"
                android:scaleType="centerInside"
                app:layout_column="1"
                app:layout_row="0"
                app:srcCompat="@drawable/food" />

            <ImageButton
                android:id="@+id/duyuru"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:background="@drawable/yeni_resim"
                android:contentDescription="@string/duyuru"
                android:scaleType="centerInside"
                app:layout_column="0"
                app:layout_row="1"
                app:srcCompat="@drawable/duyuru" />

            <ImageButton
                android:id="@+id/etkinlik"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:background="@drawable/yeni_resim"
                android:contentDescription="@string/etkinlik"
                android:scaleType="centerInside"
                app:layout_column="1"
                app:layout_row="1"
                app:srcCompat="@drawable/etkinicon" />


        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/akademisyenismi"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="156dp"
            android:text="busra"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>